tag release 0.97 of smp_utils

--- a/doc/smp_conf_zone_perm_tbl.8
+++ b/doc/smp_conf_zone_perm_tbl.8
@@ -139,7 +139,7 @@ There is an annex called "Zone permission configuration descriptor
 examples" in recent SAS\-2 and later drafts (Annex H in spl2r03.pdf).
 .PP
 There are some examples of the \fI\-\-permf=FN\fR format in the examples
-directory. Not all SAS\-2 expanders properly implement descriptor transpose
+directory. Not all SAS-2 expanders properly implement descriptor transpose
 and only place the descriptor in the row corresponding to the source zone
 group.
 .SH CONFORMING TO
