--- a/doc/smp_rep_exp_route_tbl.8
+++ b/doc/smp_rep_exp_route_tbl.8
@@ -18,11 +18,11 @@ Depending on the interface, the \fISAS_ADDR\fR may be deduced from the
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
 differentiate between HBAs if there are multiple present.
 .PP
-There are two expander route table types: phy\-based and expander\-based.
-The expander\-based route table was introduced in SAS\-2 and supersedes the
-phy\-based route tables. The REPORT EXPANDER ROUTE TABLE LIST function is
-associated with an expander\-based route table. There is no corresponding
-CONFIGURE function because a expander\-based route table is self\-configured.
+There are two expander route table types: phy-based and expander-based.
+The expander-based route table was introduced in SAS\-2 and supersedes the
+phy-based route tables. The REPORT EXPANDER ROUTE TABLE LIST function is
+associated with an expander-based route table. There is no corresponding
+CONFIGURE function because a expander-based route table is self-configured.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 .TP
