--- a/doc/smp_rep_phy_err_log.8
+++ b/doc/smp_rep_phy_err_log.8
@@ -63,7 +63,7 @@ the sg_logs utility.
 .PP
 Similar information may be obtained for SAS initiator phys (e.g. on a SAS
 HBA). As an example in Linux 2.6.28 error information can be found in this
-directory /sys/class/sas_phy/phy\-4:0 (for the phy 0 in SCSI/SAS host 4).
+directory /sys/class/sas_phy/phy-4:0 (for the phy 0 in SCSI/SAS host 4).
 .PP
 Similar information may be obtained for SATA device phys (e.g. on a SATA
 disk). If there is a SAT layer between OS and the SATA device then the
