--- a/doc/smp_write_gpio.8
+++ b/doc/smp_write_gpio.8
@@ -91,7 +91,7 @@ print the version string and then exit.
 In the technical review of SAS\-2 prior to standardization in this t10
 document: 08\-212r8.pdf (page 871 or 552) there is a comment that the
 READ GPIO REGISTER and WRITE GPIO REGISTER function headers (i.e. first
-4 bytes) do not comply with all the other SMP functions in SAS\-2.
+4 bytes) do not comply with all the other SMP functions in SAS-2.
 .PP
 There is a suggestion that enhanced variants be introduced in the next
 version of the SFF\-8485 document. If that ever happened then it has
