--- a/doc/smp_discover_list.8
+++ b/doc/smp_discover_list.8
@@ -1,12 +1,12 @@
-.TH SMP_DISCOVER_LIST "8" "February 2015" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_DISCOVER_LIST "8" "December 2011" "smp_utils\-0.97" SMP_UTILS
 .SH NAME
 smp_discover_list \- invoke DISCOVER LIST SMP function
 .SH SYNOPSIS
 .B smp_discover_list
-[\fI\-\-adn\fR] [\fI\-\-brief\fR] [\fI\-\-cap\fR] [\fI\-\-descriptor=TY\fR]
-[\fI\-\-dsn\fR] [\fI\-\-filter=FI\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
-[\fI\-\-ignore\fR] [\fI\-\-interface=PARAMS\fR] [\fI\-\-num=NUM\fR]
-[\fI\-\-one\fR] [\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
+[\fI\-\-adn\fR] [\fI\-\-brief\fR] [\fI\-\-descriptor=TY\fR]
+[\fI\-\-filter=FI\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-ignore\fR]
+[\fI\-\-interface=PARAMS\fR] [\fI\-\-num=NUM\fR] [\fI\-\-one\fR]
+[\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
 [\fI\-\-summary\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR]
 [\fI\-\-zpi=FN\fR] \fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
@@ -24,7 +24,7 @@ If the \fI\-\-phy=ID\fR option is not given then \fI\-\-summary\fR is
 assumed. When \fI\-\-summary\fR is given or assumed, this utility shows
 the disposition of each active expander phy in table form. One row is shown
 for each phy and is described in the SINGLE LINE PER PHY FORMAT section
-below. For this purpose disabled expander phys and those with errors are
+below. For this purpose disabled and errored expander phys are
 considered "active" and can be suppressed from the output by adding the
 \fI\-\-brief\fR option.
 .PP
@@ -35,10 +35,6 @@ to 40 descriptors when the "descriptor type" field in the request is set to
 1 (e.g. \fI\-\-descriptor=1\fR). Multiple DISCOVER LIST requests will be
 made if more descriptors are requested (e.g. \fI\-\-summary\fR requests 254)
 and the previous response indicates that more descriptors may be available.
-.PP
-Rather than supply options and \fISMP_DEVICE[,N]\fR on every invocation
-some can be supplied via environment variables. See the section on
-ENVIRONMENT VARIABLES below.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 .TP
@@ -51,15 +47,6 @@ is not available in the short format (e.g. \fI\-\-descriptor=1\fR).
 \fB\-b\fR, \fB\-\-brief\fR
 reduce the decoded response output.
 .TP
-\fB\-c\fR, \fB\-\-cap\fR
-decode and print phy capabilities bits fields (see SNW-3 in draft). Each
-expander phy has three of these fields: programmed, current and attached.
-By default these fields are only printed out in hex, or not at all if
-the \fI\-\-brief\fR option is given or implied. Of the three the attached
-phy capability field is probably the most interesting. If the
-\fI\-\-verbose\fR option is given, then the various "G" identifiers are
-expanded (e.g. instead of "G4:" it prints "G4 (12 Gbps):").
-.TP
 \fB\-d\fR, \fB\-\-descriptor\fR=\fITY\fR
 set the "descriptor type" field in the request. When \fITY\fR is 0 then the
 120 byte response defined by the DISCOVER function response (less its CRC
@@ -67,23 +54,13 @@ field) is placed in the descriptors of this function's response. When
 \fITY\fR is 1 the short format (i.e. 24 byte per descriptor) information
 is placed in the descriptors of this function's response.
 .TP
-\fB\-D\fR, \fB\-\-dsn\fR
-outputs the device slot number at the end of each summary line. In summary
-mode one line is output per expander phy. It is output in the
-form "dsn=<val>" where <val> is decimal in the range from 0 to 254 inclusive.
-It is not output if it is not available or has the value 255. The device
-slot number is not available in short format, so with this option in summary
-mode, if the \fI\-\-descriptor=1\fR is not given, then the longer format is
-chosen. An expander typically contains a SES device which yields device slot
-numbers in its Additional Element Status diagnostic page.
-.TP
 \fB\-f\fR, \fB\-\-filter\fR=\fIFI\fR
 set the filter field in the request. When \fIFI\fR is 0 (default) fetch
 descriptors for all phys. When \fIFI\fR is 1 only fetch descriptors for
 phys attached to (other) expanders. When \fIFI\fR is 2 only fetch
-descriptors for phys attached to expanders, SAS or SATA devices. When
-\fIFI\fR is 1 or 2, expander phys that would yield "phy vacant" (indicating
-they are hidden by zoning) are filtered out.
+descriptors for phys attached to expanders or end devices. When \fIFI\fR
+is 1 or 2, expander phys that would yield "phy vacant" (indicating they
+are hidden by zoning) are filtered out.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 output the usage message then exit.
@@ -157,71 +134,50 @@ The header section outputs information found in the DISCOVER LIST response's
 header section.
 .PP
 For each descriptor in the DISCOVER LIST response, one line is output
-starting with "  phy  <n>:" where <n> is the phy identifier (and
-they are origin zero). That is followed by the routing attribute represented
-by a single letter which is either "D" for direct routing, "S" for
-subtractive routing, "T" or "U". Both "T" and "U" imply table routing, the
-difference is that if REPORT GENERAL indicates "table to table supported"
-then "U" is output to indicate that phy can be part of an enclosure
-.B universal
-port; otherwise "T" is used. Next comes the negotiated physical link rate
-which is either "disabled", "reset problem" or "spinup hold". Other states
-are mapped to "attached". This includes enabled phys with nothing connected
-which appear as "attached:[0000000000000000:00]".
+starting with "  phy  <n>:" where <n> is the phy
+identifier (and they are origin zero). That is followed by the routing
+attribute represented by a single letter which is either "D" for direct
+routing, "S" to subtractive routing or "T" for table routing. Then comes
+the negotiated physical link rate which is either "disabled", "reset
+problem" or "spinup hold". Other states are mapped to "attached". This
+includes enabled phys with nothing connected which appear
+as "attached:[0000000000000000:00]".
 .PP
-Information shown between the brackets is for the attached device. Phys that
-are connected display something like: "attached:[5000c50000520a2a:01 " where
-the first number is the attached SAS address (in hex) and the second number
-is the attached device's phy identifier. If the attached device type is other
-than an SAS or SATA device then one of these abbreviations is
-output: "exp" (for expander), "fex" (for fanout expander) or "res" (for
-unknown attached device type). If a phy is flagged as "virtual" then the
-letter "V" appears next. Next are the protocols supported by the attached
-device which are shown as "i(<list>)" for initiator protocols
-and/or "t(<list>)" for target protocols. The <list> is made up
-of "PORT_SEL", "SSP", "STP", "SMP" and "SATA" with "+" used as a separator.
-For example a SAS host adapter will most likely appear as: "i(SSP+STP+SMP)".
-This completes the information about the attached phy, hence the closing
-right bracket.
+Information shown between the brackets is for the attached device.
+Phys that are connected display something
+like: "attached:[5000c50000520a2a:01 " where the first number is the
+attached SAS address (in hex) and the second number is the attached
+device's phy identifier. If the attached device type is other
+than an end device then one of these abbreviations is
+output: "exp" (for expander), "fex" (for fanout
+expander) or "res" (for unknown attached device type). If a phy is
+flagged as "virtual" then the letter "V" appears next. Next are the
+protocols supported by the attached device which are
+shown as "i(<list>)" for initiator protocols and/or "t(<list>)" for
+target protocols. The <list> is made up
+of "PORT_SEL", "SSP", "STP", "SMP" and "SATA" with "+" used as a
+separator. For example a SAS host adapter wi11 most likely appear
+as: "i(SSP+STP+SMP)". This completes the information about the
+attached phy, hence the closing right bracket.
 .PP
-If appropriate, the negotiated physical link rate is shown in gigabits per
-second. Here is an example of a line for expander phy identifier 11 connected
-to a SATA target (or SATA "device" to use the t13.org term):
+If appropriate, the negotiated physical link rate is shown in
+gigabits per second. Here is an example of a line for expander
+phy identifier 11 connected to a SATA target (or SATA "device" to use
+the t13.org term):
 .PP
   phy  11:T:attached:[500605b000000afb:00  t(SATA)]  1.5 Gbps
 .PP
-If the expander has zoning enabled (i.e. REPORT GENERAL response bit
-for 'zoning enabled' is set) and a phy's zone group is other than zg 1
+If the expander supports zoning (i.e. REPORT GENERAL response bit
+for 'zoning supported' is set) and a phy's zone group is other than zg 1
 then the phy's zone group is shown (e.g. "ZG:2").
 .PP
 If the \fI\-\-adn\fR option is given then after the attached SAS address
-and the attached device's phy identifier are output an extra field is
+and the attached device's phy identifier are output an extra field is 
 inserted containing the "attached device name" field. For a SAS disk this
-should be its target device name (in NAA\-5 format) and for a SATA disk its
-WWN (if provided, also in NAA\-5 format). Also when the \fI\-\-adn\fR option
+should be its target device name (in NAA-5 format) and for a SATA disk its
+WWN (if provided, also in NAA-5 format). Also when the \fI\-\-adn\fR option
 is given the phy speed and zone group are not output in order to keep the
 line length reasonable.
-.PP
-If the \fI\-\-dsn\fR option is given and device slot number information is
-available for the current phy, then "dsn=<num>" is appended to the line.
-Device slot numbers range from 0 to 254 with 255 meaning there is no
-corresponding slot so it is not listed.
-.SH ENVIRONMENT VARIABLES
-If \fISMP_DEVICE[,N]\fR is not given then the SMP_UTILS_DEVICE environment
-variable is checked and if present its contents are used instead.
-.PP
-If the SAS address (of the SMP target) is not given and it is required (i.e.
-it is not implicit in \fISMP_DEVICE[,N]\fR) then the SMP_UTILS_SAS_ADDR
-environment variable is checked and if present its contents are used as the
-SAS address. SAS addresses are usually given in hex indicated by a
-leading '0x' or trailing 'h'.
-.PP
-A device slot number (dsn) is important for establishing the relationship
-between an expander phy and a SES array element. Newer expanders (e.g. SAS\-3)
-support dsn_s in the DISCOVER (and DISCOVER LIST) functions. These can be
-shown, if available, with the \-\-dsn option to smp_discover and
-smp_discover_list utilities.. To ease typing that option often, the
-SMP_UTILS_DSN environment variableriable, if present, has the same effect.
 .SH NOTES
 In SAS\-2 and later both the DISCOVER and DISCOVER LIST functions are
 available. The DISCOVER LIST function should be favoured for several
@@ -238,7 +194,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2015 Douglas Gilbert
+Copyright \(co 2006\-2011 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
