--- a/doc/smp_utils.8
+++ b/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "February 2016" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_UTILS "8" "January 2012" "smp_utils\-0.97" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -41,29 +41,13 @@ Another method is to have a \fISMP_DEVICE\fR which represents the SMP target.
 In this case no \fISAS_ADDRESS\fR needs to be given (since it is implicit).
 .PP
 Each utility in smp_utils attempts to work out which interface it has been
-given by examining the \fISMP_DEVICE\fR file. There are three interfaces
+given by examining the \fISMP_DEVICE\fR file. There are two interfaces
 supported currently:
-.TP
-\fBaac\fR
-This specifies the aacraid SAS pass\-through associated with Adaptec/PMC
-RAID products. The \fISMP_DEVICE[,N]\fR argument takes the form
-\fI/dev/aac[N[,E_ID]]\fR where "N" is the raid controller number (typically
-0) and "E_ID" is the expander identifier (typically 0); both default to 0
-so \fI/dev/aac\fR is equivalent to \fI/dev/aac0\fR and \fI/dev/aac0,0\fR .
-The "N" is the unique_id found in /sys/class/scsi_host<HN>/unique_id .
-The "HN" is the host number which is the first number to appear on each
-line in the lsscsi utility which by default uses one line to list each
-accessible SCSI device (typically SCSI or ATA disks). The "E_ID" is the
-expander identifier which can be found with the Adaptec/PMC arcconf utility
-using the form "arcconf expanderlist <ControllerNum>". The <ControllerNum>s
-start at 1 . If an aac RAID controller is present then the /dev/acc device
-node will be created by the first smp utility to use this interface.
 .TP
 \fBmpt\fR
 This specifies the MPT fusion SAS pass\-through. The mptsas driver uses
 the '/dev/mptctl' device node (character device major 10, minor 220) while
 the mpt2sas driver uses '/dev/mpt2ctl' device node (major 10, minor 221).
-For the mpt3sas driver the corresponding device node is '/dev/mpt3ctl'.
 The 'modprobe mptctl' or 'modprobe mpt2ctl' command may be needed. If there
 are multiple mpt fusion controllers (HBAs) in the computer, then the user
 will need to specify which one to use with the syntax: '/dev/mptctl,<n>'
@@ -75,30 +59,30 @@ to specify the SAS address of the SMP target.
 .TP
 \fBsgv4\fR (\fBsg\fR)
 This interface is more generic and supported by several SAS HBA drivers
-including mptsas (and mpt2sas). It was introduced in the Linux 2.6.24
-kernel. The SMP functions are passed to the kernel via the bsg driver using
-a format known as "SCSI Generic Version 4" which gives this interface its
-name: "sgv4" or just "sg". The SAS transport layer within the SCSI
-sub\-system unpacks the SMP requests and forwards them to SAS low level
-drivers that support this interface. The \fISMP_DEVICE\fR is either a member
-of the '/sys/class/bsg' directory (e.g. /sys/class/bsg/expander\-6:0 ) or a
+including mptsas (and mpt2sas). It was introduced in the linux 2.6.24
+kernel. The SMP functions are passed to the kernel using a format known
+as "SCSI Generic Version 4" which gives this interface its name: "sgv4"
+or just "sg". The SAS transport layer within the SCSI sub-system unpacks
+the SMP requests and forwards them to SAS low level drivers that support
+this interface. The \fISMP_DEVICE\fR is either a member of
+the '/sys/class/bsg' directory (e.g. /sys/class/bsg/expander\-6:0 ) or a
 device node made for the bsg driver (e.g. /dev/bsg/expander\-6:0 ). Such
 device nodes are dynamic (i.e. they don't have fixed major and minor
 numbers) and should correspond to the major and minor numbers found in
 the 'sys/class/bsg/<smp_target_device>/dev' file.
 .SH FREEBSD INTERFACE
-The CAM subsystem has been enhanced in FreeBSD 9 to pass\-through SMP requests
+The CAM subsystem has been enhanced in FreeBSD 9 to pass-through SMP requests
 and return the corresponding responses. However CAM does not directly
 access expander devices because they are not SCSI devices. It makes the
 assumption that each SAS expander has an integrated SES (enclosure) device
-and that is addressed. This assumption seems to be true for SAS\-2 expanders
-but not some SAS\-1 expanders. Thus invocations look like this:
+and that is addressed. This assumption seems to be true for SAS-2 expanders
+but not some SAS-1 expanders. Thus invocations look like this: 
 .PP
   # smp_discover /dev/ses0
 .PP
 where /dev/ses0 is a SES device associated with a SAS expander.
 .SH SOLARIS INTERFACE
-The USMP pass\-through mechanism is used. Invocations look like this:
+The USMP pass-through mechanism is used. Invocations look like this:
 .PP
   # smp_rep_manufacturer /dev/smp/expd0
 .PP
@@ -112,15 +96,8 @@ environment variable is checked and if present its contents are used as the
 SAS address. SAS addresses are usually given in hex indicated by a
 leading '0x' or trailing 'h'.
 .PP
-A device slot number (dsn) is important for establishing the relationship
-between an expander phy and a SES array element. Newer expanders (e.g. SAS\-3)
-support dsn_s in the DISCOVER (and DISCOVER LIST) functions. These can be
-shown, if available, with the \-\-dsn option to smp_discover and
-smp_discover_list utilities.. To ease typing that option often, the
-SMP_UTILS_DSN environment variableriable, if present, has the same effect.
-.PP
-If both an environment variable and the corresponding command line option is
-given and contradict, then the command line options take precedence.
+In both cases command line options override the corresponding environment
+variable.
 .SH COMMON OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 If an option takes a numeric argument then that argument is assumed to
@@ -215,7 +192,7 @@ sysfs tree but it is not always easy to find. Doing this search may help:
   # find /sys \-name "*expander*"
 .PP
 That should show the suffix on any expanders that have been detected. Then
-a command like 'cat /sys/class/sas_device/expander\-6:0/sas_address' should
+a command like 'cat /sys/class/sas_device/expander-6:0/sas_address' should
 show its SAS address.
 .PP
 Another approach is to work backwards from SCSI devices (i.e. logical
@@ -239,49 +216,35 @@ enclosure or backplane via SGPIO or I2C on sideband signals (e.g. in a
 SFF\-8087 cable). To interact with a SES device, see the sg_ses utility.
 .PP
 Often expander phys are grouped in fours on the same connector (e.g.
-SFF\-8088). Care needs to be taken when multiple expanders are interconnected.
-An enclosure
-.B universal
-port is one in which the "table to table supported" attribute is set (in
-the REPORT GENERAL response) and the associated phys have the table routing
-attribute (in the DISCOVER response). Enclosure
-.B universal
-ports were introduced in SAS\-2 and have few restrictions when used to
-interconnect expanders or connect SAS or SATA devices. An enclosure
-.B out
-port is one in which the "table to table supported" attribute is clear and
-the associated phys have the table routing attribute. An enclosure
-.B in
-port is one in which the associated phys have the subtractive routing
-attribute. When
-.B universal
-ports are not available, an expander interconnect should be between an
-.B in
-port and an
-.B out
-port.
+SFF-8088). Care needs to be taken when multiple expanders are interconnected.
+An enclosure universal port is one in which the "table to table supported" 
+attribute is set (in the REPORT GENERAL response) and the associated phys 
+have the table routing attribute (in the DISCOVER response). Enclosure 
+universal ports were introduced in SAS\-2 and have no restrictions when
+used to interconnect expanders or connect end devices. An enclosure out port
+is one in which the "table to table supported" attribute is clear and the
+associated phys have the table routing attribute. An enclosure in port is one
+in which the associated phys have the subtractive routing attribute. When
+universal ports are not available, an expander interconnect should be between
+an in port and an out port.
 .SH EXAMPLES
 See "Examples" section in http://sg.danny.cz/sg/smp_utils.html .
 .SH CONFORMING TO
-SAS has multiple generations. The early standards are: the original
-SAS (ANSI INCITS 376\-2003), SAS 1.1 (INCITS 417\-2006) and SAS\-2 (ANSI
-INCITS 457\-2010) . SAS\-2.1 work was split into an electrical and physical
-layers document (standardized as SAS\-2.1 ANSI INCITS 478\-2011) with the
-upper level layers placed in a document called the SAS Protocol Layer and
-it was standardized as SPL ANSI INCITS 476\-2011. Next came SPL\-2 which
-was standardized as SPL\-2 ANSI INCITS 505\-2013. Then came SPL\-3 which
-was standardized as SPL\-3 ANSI INCITS 492\-2015. SPL\-4 is near
-standardization and its most recent draft is spl3r05.pdf. To avoid
-confusion, the multiple generations of SAS will be referred to in these man
-pages as SAS 1, 1.1, 2, 2.1 (SPL) and 3 (SPL\-2 and SPL\-3). Roughly
-speaking SAS\-1 runs at 3 Gbps, SAS\-2 at 6 Gbps, SAS\-3 at 12 Gbps and
-SAS\-4 at 22.5 Gbps. Drafts, including those just prior to standardization
-can be found at the http://www.t10.org site (e.g. spl\-r07.pdf and
-spl2r04c.pdf). INCITS policy now requires a registration to view these
-drafts, a break from t10.org tradition.
+SAS has multiple generations. The first three generations are approved
+standards: the original SAS (ANSI INCITS 376-2003), SAS 1.1 (INCITS 417-2006)
+and SAS\-2 (ANSI INCITS 457-2010) . SAS\-2.1 technical work is ongoing and
+it has been split into two documents, the one of interest is called the SAS
+Protocol Layer (SPL) and  at the time of writing the most recent draft is
+spl\-r07.pdf (see section 9.4.3 for SMP functions). Technical work on SAS\-3
+has started with the SMP functions defined in the SPL\-2
+document (spl2r03.pdf). To avoid confusion, the multiple generations of SAS
+will be referred to in these man pages as SAS 1, 1.1, 2, 2.1 and 3 . Drafts,
+including those just prior to standardization can be found at the
+http://www.t10.org site. INCITS policy now requires a registration to view
+these drafts, a break from t10.org tradition.
 .PP
 The two utilities for reading and writing to GPIO registers, smp_read_gpio
-and smp_write_gpio, are defined in the Small Form Factor document SFF\-8485
+and smp_write_gpio, are defined in the Small Form Factor document SFF-8485
 found at http://www.sffcommittee.com . "Enhanced" versions of the
 corresponding SMP functions have been mentioned in some drafts but no
 definitions have been published and the references have been removed in more
@@ -301,9 +264,9 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2016 Douglas Gilbert
+Copyright \(co 2006\-2012 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
-.B sg_logs, sg_vpd, sg_ses(sg3_utils); sdparm(sdparm); lsscsi(lsscsi)
+.B sg_logs, sg_vpd, sg_ses(sg3_utils); sdparm(sdparm)
