tag release 0.98 of smp_utils

--- a/doc/smp_discover.8
+++ b/doc/smp_discover.8
@@ -1,14 +1,14 @@
-.TH SMP_DISCOVER "8" "February 2015" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_DISCOVER "8" "April 2014" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_discover \- invoke DISCOVER SMP function
 .SH SYNOPSIS
 .B smp_discover
-[\fI\-\-adn\fR] [\fI\-\-brief\fR] [\fI\-\-cap\fR] [\fI\-\-dsn\fR]
-[\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-ignore\fR]
-[\fI\-\-interface=PARAMS\fR] [\fI\-\-list\fR] [\fI\-\-multiple\fR]
-[\fI\-\-my\fR] [\fI\-\-num=NUM\fR] [\fI\-\-phy=ID\fR] [\fI\-\-raw\fR]
-[\fI\-\-sa=SAS_ADDR\fR] [\fI\-\-summary\fR] [\fI\-\-verbose\fR]
-[\fI\-\-version\fR] [\fI\-\-zero\fR] \fISMP_DEVICE[,N]\fR
+[\fI\-\-adn\fR] [\fI\-\-brief\fR] [\fI\-\-cap\fR] [\fI\-\-help\fR]
+[\fI\-\-hex\fR] [\fI\-\-ignore\fR] [\fI\-\-interface=PARAMS\fR]
+[\fI\-\-list\fR] [\fI\-\-multiple\fR] [\fI\-\-my\fR] [\fI\-\-num=NUM\fR]
+[\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
+[\fI\-\-summary\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR] [\fI\-\-zero\fR]
+\fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
@@ -27,10 +27,6 @@ for each phy and is described in the SINGLE LINE PER PHY FORMAT section
 below. For this purpose disabled expander phys and those with errors are
 considered "active" and can be suppressed from the output by adding the
 \fI\-\-brief\fR option.
-.PP
-Rather than supply options and \fISMP_DEVICE[,N]\fR on every invocation
-some can be supplied via environment variables. See the section on
-ENVIRONMENT VARIABLES below.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 .TP
@@ -57,14 +53,6 @@ expanded (e.g. instead of "G4:" it prints "G4 (12 Gbps):").
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 output the usage message then exit.
-.TP
-\fB\-D\fR, \fB\-\-dsn\fR
-outputs the device slot number at the end of each summary line. In summary
-mode one line is output per expander phy. It is output in the
-form "dsn=<val>" where <val> is decimal in the range from 0 to 254 inclusive.
-It is not output if it is not available or has the value 255. An expander
-typically contains a SES device which yields device slot numbers in its
-Additional Element Status diagnostic page.
 .TP
 \fB\-H\fR, \fB\-\-hex\fR
 output the response (less the CRC field) in hexadecimal.
@@ -192,27 +180,6 @@ should be its target device name (in NAA\-5 format) and for a SATA disk its
 WWN (if provided, also in NAA\-5 format). Also when the \fI\-\-adn\fR option
 is given the phy speed and zone group are not output in order to keep the
 line length reasonable.
-.PP
-If the \fI\-\-dsn\fR option is given and device slot number information is
-available for the current phy, then "dsn=<num>" is appended to the line.
-Device slot numbers range from 0 to 254 with 255 meaning there is no
-corresponding slot so it is not listed.
-.SH ENVIRONMENT VARIABLES
-If \fISMP_DEVICE[,N]\fR is not given then the SMP_UTILS_DEVICE environment
-variable is checked and if present its contents are used instead.
-.PP
-If the SAS address (of the SMP target) is not given and it is required (i.e.
-it is not implicit in \fISMP_DEVICE[,N]\fR) then the SMP_UTILS_SAS_ADDR
-environment variable is checked and if present its contents are used as the
-SAS address. SAS addresses are usually given in hex indicated by a
-leading '0x' or trailing 'h'.
-.PP
-A device slot number (dsn) is important for establishing the relationship
-between an expander phy and a SES array element. Newer expanders (e.g. SAS\-3)
-support dsn_s in the DISCOVER (and DISCOVER LIST) functions. These can be
-shown, if available, with the \-\-dsn option to smp_discover and
-smp_discover_list utilities.. To ease typing that option often, the
-SMP_UTILS_DSN environment variableriable, if present, has the same effect.
 .SH NOTES
 In SAS\-2 and later both the DISCOVER and DISCOVER LIST functions are
 available. The DISCOVER LIST function should be favoured for several
@@ -235,7 +202,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2015 Douglas Gilbert
+Copyright \(co 2006\-2014 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
