--- a/doc/smp_discover_list.8
+++ b/doc/smp_discover_list.8
@@ -1,12 +1,12 @@
-.TH SMP_DISCOVER_LIST "8" "February 2015" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_DISCOVER_LIST "8" "April 2014" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_discover_list \- invoke DISCOVER LIST SMP function
 .SH SYNOPSIS
 .B smp_discover_list
 [\fI\-\-adn\fR] [\fI\-\-brief\fR] [\fI\-\-cap\fR] [\fI\-\-descriptor=TY\fR]
-[\fI\-\-dsn\fR] [\fI\-\-filter=FI\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
-[\fI\-\-ignore\fR] [\fI\-\-interface=PARAMS\fR] [\fI\-\-num=NUM\fR]
-[\fI\-\-one\fR] [\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
+[\fI\-\-filter=FI\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-ignore\fR]
+[\fI\-\-interface=PARAMS\fR] [\fI\-\-num=NUM\fR] [\fI\-\-one\fR]
+[\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
 [\fI\-\-summary\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR]
 [\fI\-\-zpi=FN\fR] \fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
@@ -35,10 +35,6 @@ to 40 descriptors when the "descriptor type" field in the request is set to
 1 (e.g. \fI\-\-descriptor=1\fR). Multiple DISCOVER LIST requests will be
 made if more descriptors are requested (e.g. \fI\-\-summary\fR requests 254)
 and the previous response indicates that more descriptors may be available.
-.PP
-Rather than supply options and \fISMP_DEVICE[,N]\fR on every invocation
-some can be supplied via environment variables. See the section on
-ENVIRONMENT VARIABLES below.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 .TP
@@ -66,16 +62,6 @@ set the "descriptor type" field in the request. When \fITY\fR is 0 then the
 field) is placed in the descriptors of this function's response. When
 \fITY\fR is 1 the short format (i.e. 24 byte per descriptor) information
 is placed in the descriptors of this function's response.
-.TP
-\fB\-D\fR, \fB\-\-dsn\fR
-outputs the device slot number at the end of each summary line. In summary
-mode one line is output per expander phy. It is output in the
-form "dsn=<val>" where <val> is decimal in the range from 0 to 254 inclusive.
-It is not output if it is not available or has the value 255. The device
-slot number is not available in short format, so with this option in summary
-mode, if the \fI\-\-descriptor=1\fR is not given, then the longer format is
-chosen. An expander typically contains a SES device which yields device slot
-numbers in its Additional Element Status diagnostic page.
 .TP
 \fB\-f\fR, \fB\-\-filter\fR=\fIFI\fR
 set the filter field in the request. When \fIFI\fR is 0 (default) fetch
@@ -201,27 +187,6 @@ should be its target device name (in NAA\-5 format) and for a SATA disk its
 WWN (if provided, also in NAA\-5 format). Also when the \fI\-\-adn\fR option
 is given the phy speed and zone group are not output in order to keep the
 line length reasonable.
-.PP
-If the \fI\-\-dsn\fR option is given and device slot number information is
-available for the current phy, then "dsn=<num>" is appended to the line.
-Device slot numbers range from 0 to 254 with 255 meaning there is no
-corresponding slot so it is not listed.
-.SH ENVIRONMENT VARIABLES
-If \fISMP_DEVICE[,N]\fR is not given then the SMP_UTILS_DEVICE environment
-variable is checked and if present its contents are used instead.
-.PP
-If the SAS address (of the SMP target) is not given and it is required (i.e.
-it is not implicit in \fISMP_DEVICE[,N]\fR) then the SMP_UTILS_SAS_ADDR
-environment variable is checked and if present its contents are used as the
-SAS address. SAS addresses are usually given in hex indicated by a
-leading '0x' or trailing 'h'.
-.PP
-A device slot number (dsn) is important for establishing the relationship
-between an expander phy and a SES array element. Newer expanders (e.g. SAS\-3)
-support dsn_s in the DISCOVER (and DISCOVER LIST) functions. These can be
-shown, if available, with the \-\-dsn option to smp_discover and
-smp_discover_list utilities.. To ease typing that option often, the
-SMP_UTILS_DSN environment variableriable, if present, has the same effect.
 .SH NOTES
 In SAS\-2 and later both the DISCOVER and DISCOVER LIST functions are
 available. The DISCOVER LIST function should be favoured for several
@@ -238,7 +203,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2015 Douglas Gilbert
+Copyright \(co 2006\-2014 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
