--- a/doc/smp_utils.8
+++ b/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "February 2016" "smp_utils\-0.99" SMP_UTILS
+.TH SMP_UTILS "8" "May 2014" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -112,15 +112,8 @@ environment variable is checked and if present its contents are used as the
 SAS address. SAS addresses are usually given in hex indicated by a
 leading '0x' or trailing 'h'.
 .PP
-A device slot number (dsn) is important for establishing the relationship
-between an expander phy and a SES array element. Newer expanders (e.g. SAS\-3)
-support dsn_s in the DISCOVER (and DISCOVER LIST) functions. These can be
-shown, if available, with the \-\-dsn option to smp_discover and
-smp_discover_list utilities.. To ease typing that option often, the
-SMP_UTILS_DSN environment variableriable, if present, has the same effect.
-.PP
-If both an environment variable and the corresponding command line option is
-given and contradict, then the command line options take precedence.
+If either or both environment variables and the corresponding command line
+options are given, then the command line options take precedence.
 .SH COMMON OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 If an option takes a numeric argument then that argument is assumed to
@@ -269,16 +262,15 @@ INCITS 457\-2010) . SAS\-2.1 work was split into an electrical and physical
 layers document (standardized as SAS\-2.1 ANSI INCITS 478\-2011) with the
 upper level layers placed in a document called the SAS Protocol Layer and
 it was standardized as SPL ANSI INCITS 476\-2011. Next came SPL\-2 which
-was standardized as SPL\-2 ANSI INCITS 505\-2013. Then came SPL\-3 which
-was standardized as SPL\-3 ANSI INCITS 492\-2015. SPL\-4 is near
-standardization and its most recent draft is spl3r05.pdf. To avoid
+was standardized as SPL\-2 ANSI INCITS 505\-2013. SPL\-3 is near
+standardization and its most recent draft is spl3r07.pdf. To avoid
 confusion, the multiple generations of SAS will be referred to in these man
 pages as SAS 1, 1.1, 2, 2.1 (SPL) and 3 (SPL\-2 and SPL\-3). Roughly
-speaking SAS\-1 runs at 3 Gbps, SAS\-2 at 6 Gbps, SAS\-3 at 12 Gbps and
-SAS\-4 at 22.5 Gbps. Drafts, including those just prior to standardization
-can be found at the http://www.t10.org site (e.g. spl\-r07.pdf and
-spl2r04c.pdf). INCITS policy now requires a registration to view these
-drafts, a break from t10.org tradition.
+speaking SAS\-1 runs at 3 Gbps, SAS\-2 at 6 Gbps and SAS\-3 at 12 Gbps.
+Drafts, including those just prior to standardization can be found at the
+http://www.t10.org site (e.g. spl\-r07.pdf and spl2r04c.pdf). INCITS policy
+now requires a registration to view these drafts, a break from t10.org
+tradition.
 .PP
 The two utilities for reading and writing to GPIO registers, smp_read_gpio
 and smp_write_gpio, are defined in the Small Form Factor document SFF\-8485
@@ -301,7 +293,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2016 Douglas Gilbert
+Copyright \(co 2006\-2014 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
