--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 smp-utils (0.99-0.1) unstable; urgency=low
 
-  * add --dsn option to smp_discover[_list]
+  * move toward G5 (22.5 Gbps)
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 01 Feb 2016 23:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 29 Feb 2016 19:00:00 -0500
 
 smp-utils (0.98-0.1) unstable; urgency=low
 
