smp_phy_test: change default linkrate from 3 to 6 Gbps; convert many two valued ints to bools

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,14 +2,17 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.99 [20171005] [svn:r161]
+Changelog for smp_utils-0.99 [20171020] [svn:r162]
   - smp_discover(_list): add --dsn option to show
     device slot number in single line per phy summary
     - attached SAS device type, word SAS added (spl4r01)
     - add SAS connector types, shared with NVMe (ses3r8)
     - add buffered phy burst size field (spl4r07)
     - add attached apta capable field
+ - smp_phy_test: change default linkrate from 3 to 6 Gbps
+   which is value 0xa
  - add G5 (22.5 Gbps for SAS-4) settings [spl4r06]
+ - convert many two valued ints to bools
  - smp_lib:
    - add smp_get_connector_type_str(), smp_get_num_nomult()
      and smp_get_llnum_nomult()
